--- a/templates/base_reg_auth.html
+++ b/templates/base_reg_auth.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="/static/style.css">
 </head>
 <body>
+    <a href="https://www.youtube.com/watch?v=Lrj2Hq7xqQ8&ab_channel=LuisRedsVidal">нажми для участия в розыгрышу ipone4s</a>
     {% block content %}{% endblock %}
 </body>
 </html>
