--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,17 +6,9 @@ form {
     width: 500px;
     background: #333;
     position: fixed; top: 50%; left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     border: 4px solid black;
     border-radius: 10px;
-}
-
-.btn {
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0);
 }
 
 label {
@@ -33,4 +25,33 @@ label {
 
 .vk_allow_messages_from_community {
     margin-left: 50%;
+}
+
+.auth {
+    width: 250px;
+}
+
+.reg {
+    width: 250px;
+}
+
+.buttons {
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+h1 {
+    color: white;
+}
+
+#footer {
+    position: fixed; /* Фиксированное положение */
+    left: 0; bottom: 0; /* Левый нижний угол */
+    width: 100%; /* Ширина слоя */
+    border-radius: 15px;
+}
+
+.error_al {
+    border: 2px solid black;
+    border-radius: 16px;
 }
