--- a/templates/base_reg_auth.html
+++ b/templates/base_reg_auth.html
@@ -7,10 +7,9 @@
           rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
           crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/static/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
 </head>
 <body>
-    <a href="https://www.youtube.com/watch?v=Lrj2Hq7xqQ8&ab_channel=LuisRedsVidal">нажми для участия в розыгрышу ipone4s</a>
     {% block content %}{% endblock %}
 </body>
 </html>
