--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="buttons">
         <button type="button" class="reg btn btn-secondary" disabled>Регистрация</button>
-        <a href="http://https://test.magnumopusproject.xyz/authorize">
+        <a href="https://test.magnumopusproject.xyz/authorize">
             <button type="button" class="auth btn btn-dark btn-lg">Вход</button>
         </a>
     </div>
