--- a/templates/authorize.html
+++ b/templates/authorize.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="buttons">
-        <a href="https://test.magnumopusproject.xyz/">
+        <a href="/">
             <button type="button" class="reg btn btn-dark btn-lg">Регистрация</button>
         </a>
         <button type="button" class="auth btn btn-secondary auth" disabled>Вход</button>
