--- a/templates/base_reg_auth.html
+++ b/templates/base_reg_auth.html
@@ -7,9 +7,13 @@
           rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
           crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/style.css">
+    <script type="text/javascript" src="https://vk.com/js/api/openapi.js?169"></script>
 </head>
 <body>
+    <h1 class="alert alert-secondary" role="alert">
+        Magnum Opus
+    </h1>
     {% block content %}{% endblock %}
 </body>
 </html>
