--- a/templates/test.html
+++ b/templates/test.html
@@ -24,6 +24,6 @@
             </div>
             </div>
         {% endfor %}
-        <button type="submit" class="btn btn-dark" style="margin-left: 20px; width: 150px; margin-bottom: 10px">Добавить</button>
+        <button type="submit" class="btn btn-dark" style="margin-left: 20px; width: 150px; margin-bottom: 10px">Отправить</button>
     </form>
 {% endblock %}
